--- a/unit0/Makefile
+++ b/unit0/Makefile
@@ -1,10 +1,10 @@
 all: hello
 
 hello: hello.o
-	 gcc -o hello hello.o
+	 gcc -o build/hello hello.o
 
 hello.o: hello.c
 	 gcc -c hello.c
      
 clean:
-	 rm hello.o hello
+	 rm hello.o build/hello
