examples of processes 1

--- a/unit2/share_memory/Makefile
+++ b/unit2/share_memory/Makefile
@@ -1,4 +1,7 @@
-all: producer consumer
+all: init producer consumer
+
+init: 
+	mkdir -p build
 
 producer: 
 	gcc -o build/producer producer.c -lrt
