nuevo ejemplo use pthread_exit with join

--- a/unit2/use_thread/Makefile
+++ b/unit2/use_thread/Makefile
@@ -1,19 +1,22 @@
-all: build build/simple build/onethread build/nthreads build/use_join
+all: build build/simple build/use_exit build/onethread build/nthreads build/use_join
 
 build: 
 	mkdir -p build
 
 build/simple: simple_example.c
-	gcc -o build/simple simple_example.c -lpthread
+	gcc -Wall -o build/simple simple_example.c -lpthread
+
+build/use_exit: use_exit.c
+	gcc -Wall -o build/use_exit use_exit.c -lpthread
 
 build/onethread: multi_matrix/onethread.c
-	gcc -o build/onethread multi_matrix/onethread.c -lpthread
+	gcc -Wall -o build/onethread multi_matrix/onethread.c -lpthread
 
 build/nthreads: multi_matrix/twothreads.c
-	gcc -o build/nthreads multi_matrix/twothreads.c -lpthread
+	gcc -Wall -o build/nthreads multi_matrix/twothreads.c -lpthread
 
 build/use_join:
-	gcc -o build/use_join use_join.c -lpthread
+	gcc -Wall -o build/use_join use_join.c -lpthread
 
 clean: 
 	rm -R build/
