pa3 and add libraries and others in unit2

--- a/unit2/share_memory/Makefile
+++ b/unit2/share_memory/Makefile
@@ -4,10 +4,10 @@ init:
 	mkdir -p build
 
 producer: 
-	gcc -o build/producer producer.c -lrt
+	gcc -g -Wall -o build/producer producer.c -lrt
 
 consumer:
-	gcc -o build/consumer consumer.c -lrt
+	gcc -g -Wall -o build/consumer consumer.c -lrt
      
 clean:
 	 rm build/*
