correct images for tests

--- a/unit2/pa03-skeleton/Makefile
+++ b/unit2/pa03-skeleton/Makefile
@@ -12,18 +12,8 @@ clean:
 	rm *.o ex5
 
 test: ex5
-	./ex5 testcases/car.bmp outputs/car_out.bmp
-	diff outputs/car_out.bmp testcases/car_sol.bmp
-	./ex5 testcases/airplane.bmp outputs/airplane_out.bmp
-	diff outputs/airplane_out.bmp testcases/airplane_sol.bmp
-	./ex5 testcases/purduetrain.bmp outputs/purduetrain_out.bmp
-	diff outputs/purduetrain_out.bmp testcases/purduetrain_sol.bmp
-	./ex5 testcases/wizard.bmp outputs/wizard_out.bmp
-	diff outputs/wizard_out.bmp testcases/wizard_sol.bmp
-
+	./ex5 testcases/test.bmp outputs/test_out.bmp
+	diff outputs/test_out.bmp testcases/test_sol.bmp
+	
 testmem: ex5
-	valgrind --tool=memcheck --leak-check=summary ./ex5 testcases/car.bmp outputs/car_out.bmp
-	valgrind --tool=memcheck --leak-check=summary ./ex5 testcases/airplane.bmp outputs/airplane_out.bmp
-	valgrind --tool=memcheck --leak-check=summary ./ex5 testcases/purduetrain.bmp outputs/purduetrain_out.bmp
-	valgrind --tool=memcheck --leak-check=summary ./ex5 testcases/wizard.bmp outputs/wizard_out.bmp
-
+	valgrind --tool=memcheck --leak-check=summary ./ex5 testcases/test.bmp outputs/test_out.bmp	
